--- a/app/src/main/res/layout/layout_chat_review.xml
+++ b/app/src/main/res/layout/layout_chat_review.xml
@@ -4,42 +4,61 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:padding="@dimen/dp_5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/buleBg"
-            android:textSize="@dimen/sp_13"
-            android:id="@+id/tv_name"
-            android:background="@drawable/text_view_pressed"/>
-        <TextView
-            android:layout_marginLeft="@dimen/dp_5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="回复"
-            android:textSize="@dimen/sp_13"/>
-        <TextView
-            android:layout_marginLeft="@dimen/dp_5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/buleBg"
-            android:textSize="@dimen/sp_13"
-            android:id="@+id/tv_toName"
-            android:background="@drawable/text_view_pressed"/>
-        <TextView
-            android:layout_marginLeft="@dimen/dp_5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_content"
-            android:textSize="@dimen/sp_14"/>
-    </LinearLayout>
     <View
         android:id="@+id/v_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/picture_color_f2"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/dp_5">
+        <LinearLayout
+            android:layout_toLeftOf="@+id/tv_time"
+            android:layout_marginRight="@dimen/dp_7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
+            <tk.com.sharemusic.myview.CircleImage
+                android:id="@+id/iv_head"
+                android:layout_width="@dimen/dp_30"
+                android:layout_height="@dimen/dp_30"/>
+            <TextView
+                android:layout_marginLeft="@dimen/dp_10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/buleBg"
+                android:textSize="@dimen/sp_12"
+                android:id="@+id/tv_name"
+                android:background="@drawable/text_view_pressed"/>
+            <TextView
+                android:layout_marginLeft="@dimen/dp_5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="回复"
+                android:textSize="@dimen/sp_12"/>
+            <TextView
+                android:layout_marginLeft="@dimen/dp_5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/buleBg"
+                android:textSize="@dimen/sp_12"
+                android:id="@+id/tv_toName"
+                android:background="@drawable/text_view_pressed"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_content"
+                android:textSize="@dimen/sp_11"/>
+        </LinearLayout>
+        <TextView
+            android:id="@+id/tv_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text=""
+            android:textSize="@dimen/sp_10"
+            android:layout_centerVertical="true"/>
+    </RelativeLayout>
 </LinearLayout>
