--- a/app/src/main/res/layout/activity_publish_msg.xml
+++ b/app/src/main/res/layout/activity_publish_msg.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.PublishMsgActivity">
+    tools:context=".activity.PublishMsgActivity"
+    android:background="@color/color_f4f4f4">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,6 +36,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/rcy_msg"/>
+            android:id="@+id/rcy_msg"
+            android:background="@color/color_f4f4f4"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
