--- a/app/src/main/res/layout/fragment_mine_fragment.xml
+++ b/app/src/main/res/layout/fragment_mine_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.SocialPublic">
+    tools:context=".fragment.SocialPublishFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <ScrollView
