--- a/app/src/main/res/layout/fragment_social_public.xml
+++ b/app/src/main/res/layout/fragment_social_public.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:id="@+id/fl_public"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragment.SocialPublic">
+    tools:context=".fragment.SocialPublishFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
