--- a/app/src/main/res/layout/activity_share.xml
+++ b/app/src/main/res/layout/activity_share.xml
@@ -1,34 +1,203 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:id="@+id/ll_share_content"
     tools:context=".activity.ShareActivity">
 
     <RelativeLayout
+        android:id="@+id/rl_head"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <RelativeLayout
+        android:background="@color/white"
+        android:layout_height="@dimen/dp_40">
+        <ImageView
+            android:id="@+id/iv_back"
+            android:layout_width="@dimen/dp_40"
+            android:layout_height="@dimen/dp_40"
+            android:padding="@dimen/dp_10"
+            android:src="@drawable/ic_back"
+            android:layout_marginLeft="@dimen/dp_5"/>
+
+        <TextView
+            android:id="@+id/btn_share"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="发布"
+            android:textSize="@dimen/sp_12"
+            android:layout_centerVertical="true"
+            android:paddingTop="@dimen/dp_8"
+            android:paddingBottom="@dimen/dp_8"
+            android:paddingRight="@dimen/dp_10"
+            android:paddingLeft="@dimen/dp_10"
+            android:background="@drawable/grey_bg"
+            android:textColor="@color/textColorGrey"
+            android:layout_marginRight="@dimen/dp_10"/>
+    </RelativeLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_100"
-            android:background="@drawable/round_white_bg">
-            <EditText
-                android:id="@+id/et_context"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="输入分享的内容"
-                android:text=""
-                android:textColor="@color/textColorBlack"/>
-        </RelativeLayout>
-        <Button
-            android:id="@+id/btn_share"
-            android:enabled="false"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_margin="@dimen/dp_10"
-            android:text="分享"/>
-    </RelativeLayout>
+                android:orientation="vertical"
+                android:background="@color/white"
+                android:layout_margin="@dimen/dp_10">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_100">
+                    <EditText
+                        android:id="@+id/et_context"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="此刻的心情"
+                        android:text=""
+                        android:textSize="@dimen/sp_13"
+                        android:textColor="@color/textColorBlack"
+                        android:background="@color/transparent"
+                        android:padding="@dimen/dp_5"/>
+                </RelativeLayout>
+                <tk.com.sharemusic.myview.MyGridView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/gv_share"
+                    android:horizontalSpacing="@dimen/dp_5"
+                    android:verticalSpacing="@dimen/dp_5"
+                    android:numColumns="3"
+                    android:visibility="gone"/>
+                <RelativeLayout
+                    android:id="@+id/rl_video"
+                    android:visibility="gone"
+                    android:layout_width="@dimen/dp_120"
+                    android:layout_height="@dimen/dp_150">
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/iv_video"/>
+                    <ImageView
+                        android:visibility="gone"
+                        android:id="@+id/iv_delete"
+                        android:layout_width="@dimen/dp_20"
+                        android:layout_height="@dimen/dp_20"
+                        android:layout_alignParentRight="true"
+                        android:src="@drawable/delete_round"
+                        android:layout_margin="@dimen/dp_3"/>
+                    <ImageView
+                        android:id="@+id/iv_play"
+                        android:visibility="gone"
+                        android:layout_width="@dimen/dp_30"
+                        android:layout_height="@dimen/dp_30"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/picture_icon_video_play"/>
+                </RelativeLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginRight="@dimen/dp_10"
+                android:layout_marginLeft="@dimen/dp_10">
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_1"
+                    android:background="@color/transWhite"/>
+                <RelativeLayout
+                    android:id="@+id/rl_location"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="@dimen/dp_10"
+                    android:paddingTop="@dimen/dp_10"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_vertical">
+                    <ImageView
+                        android:id="@+id/iv_location"
+                        android:layout_width="@dimen/dp_20"
+                        android:layout_height="@dimen/dp_20"
+                        android:src="@drawable/location_no"
+                        android:layout_centerVertical="true"/>
+                    <TextView
+                        android:id="@+id/tv_location"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/textColorBlack"
+                        android:text="所在位置"
+                        android:textSize="@dimen/sp_13"
+                        android:layout_toRightOf="@+id/iv_location"
+                        android:layout_marginLeft="@dimen/dp_10"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="@dimen/dp_35"
+                        android:singleLine="true"
+                        android:ellipsize="end"/>
+                    <ImageView
+                        android:layout_width="@dimen/dp_15"
+                        android:layout_height="@dimen/dp_15"
+                        android:layout_alignParentRight="true"
+                        android:src="@drawable/ic_right"
+                        android:layout_marginRight="@dimen/dp_10"
+                        android:layout_centerVertical="true"/>
+                </RelativeLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_1"
+                    android:layout_marginLeft="@dimen/dp_30"
+                    android:background="@color/transWhite"/>
+                <RelativeLayout
+                    android:id="@+id/rl_people"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_vertical"
+                    android:paddingBottom="@dimen/dp_10"
+                    android:paddingTop="@dimen/dp_10">
+                    <ImageView
+                        android:id="@+id/iv_people"
+                        android:layout_width="@dimen/dp_20"
+                        android:layout_height="@dimen/dp_20"
+                        android:src="@drawable/people"
+                        android:layout_centerVertical="true"/>
+                    <TextView
+                        android:id="@+id/tv_people_see"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/textColorBlack"
+                        android:text="谁可以看"
+                        android:textSize="@dimen/sp_13"
+                        android:layout_toRightOf="@+id/iv_people"
+                        android:layout_marginLeft="@dimen/dp_10"
+                        android:layout_centerVertical="true"/>
+                    <ImageView
+                        android:layout_width="@dimen/dp_15"
+                        android:layout_height="@dimen/dp_15"
+                        android:layout_alignParentRight="true"
+                        android:src="@drawable/ic_right"
+                        android:layout_marginRight="@dimen/dp_10"
+                        android:layout_centerVertical="true"/>
+                    <TextView
+                        android:id="@+id/tv_people_type"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="@dimen/dp_35"
+                        android:textColor="@color/textColorGrey"
+                        android:text="公开"
+                        android:textSize="@dimen/sp_13"/>
+                </RelativeLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_1"
+                    android:background="@color/transWhite"/>
+            </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
+    </ScrollView>
+
+</LinearLayout>
