--- a/app/src/main/res/layout/common_dialog_layout.xml
+++ b/app/src/main/res/layout/common_dialog_layout.xml
@@ -32,7 +32,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="相机"
+        android:text="拍照"
         android:id="@+id/tv_text2"
         android:textSize="@dimen/sp_17"
         android:padding="@dimen/dp_20"/>
