--- a/app/src/main/res/layout/layout_share_pic.xml
+++ b/app/src/main/res/layout/layout_share_pic.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/dp_130"
-    android:orientation="vertical">
+    android:layout_height="@dimen/dp_100"
+    android:orientation="vertical"
+    android:background="@color/light_gray">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -11,7 +12,8 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="fitXY"
-            android:id="@+id/iv_pic"/>
+            android:scaleType="centerCrop"
+            android:id="@+id/iv_pic"
+            android:src="@drawable/default_head_girl"/>
     </RelativeLayout>
 </LinearLayout>
