--- a/app/src/main/res/layout/social_public_item_layout.xml
+++ b/app/src/main/res/layout/social_public_item_layout.xml
@@ -91,7 +91,7 @@
     </RelativeLayout>
     <LinearLayout
         android:id="@+id/ll_share_pic"
-        android:visibility="gone"
+        android:visibility="visible"
         android:padding="@dimen/dp_10"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -103,13 +103,68 @@
             android:textColor="@color/textColorBlack"
             android:id="@+id/tv_text2"/>
         <ImageView
+            android:visibility="gone"
             android:layout_marginTop="@dimen/dp_5"
             android:id="@+id/iv_img"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/dp_130"
             android:minHeight="@dimen/dp_130"
             android:adjustViewBounds="true"/>
+        <LinearLayout
+            android:visibility="gone"
+            android:id="@+id/ll_iv4"
+            android:layout_marginTop="@dimen/dp_5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/iv1"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/dp_100"
+                    android:scaleType="centerCrop"
+                    android:layout_weight="1"/>
+                <ImageView
+                    android:id="@+id/iv2"
+                    android:layout_marginLeft="@dimen/dp_3"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/dp_100"
+                    android:scaleType="centerCrop"
+                    android:layout_weight="1"/>
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/dp_100"
+                    android:layout_weight="1"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_marginTop="@dimen/dp_3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/iv3"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/dp_100"
+                    android:scaleType="centerCrop"
+                    android:layout_weight="1"/>
+                <ImageView
+                    android:id="@+id/iv4"
+                    android:layout_marginLeft="@dimen/dp_3"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/dp_100"
+                    android:scaleType="centerCrop"
+                    android:layout_weight="1"/>
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/dp_100"
+                    android:layout_weight="1"/>
+            </LinearLayout>
+        </LinearLayout>
         <tk.com.sharemusic.myview.MyGridView
+            android:visibility="gone"
             android:layout_marginTop="@dimen/dp_5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
