--- a/app/src/main/res/layout/activity_share_detail.xml
+++ b/app/src/main/res/layout/activity_share_detail.xml
@@ -249,6 +249,44 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <LinearLayout
+                android:visibility="gone"
+                android:id="@+id/rl_location"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:layout_toLeftOf="@+id/ll_edit">
+                <ImageView
+                    android:id="@+id/iv_first"
+                    android:layout_width="@dimen/dp_20"
+                    android:layout_height="@dimen/dp_20"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/ic_location_publish"/>
+                <TextView
+                    android:layout_centerVertical="true"
+                    android:id="@+id/tv_where"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/greenBg"
+                    android:maxWidth="@dimen/dp_150"
+                    android:text="成都市"
+                    android:singleLine="true"
+                    android:ellipsize="end"
+                    android:layout_gravity="bottom"
+                    android:layout_marginLeft="@dimen/dp_5"
+                    android:textSize="@dimen/sp_12"/>
+                <TextView
+                    android:id="@+id/tv_distance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/textColorGrey"
+                    android:text="11km"
+                    android:layout_gravity="bottom"
+                    android:layout_marginLeft="@dimen/dp_5"
+                    android:textSize="@dimen/sp_10"/>
+            </LinearLayout>
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
