--- a/app/src/main/res/layout/activity_share_detail.xml
+++ b/app/src/main/res/layout/activity_share_detail.xml
@@ -124,7 +124,8 @@
                 android:textSize="@dimen/sp_15"
                 android:textColor="@color/textColorBlack"
                 android:id="@+id/tv_text2"/>
-            <ImageView
+            <com.shehuan.niv.NiceImageView
+                app:corner_radius="@dimen/dp_10"
                 android:layout_marginTop="@dimen/dp_5"
                 android:id="@+id/iv_img"
                 android:layout_width="wrap_content"
@@ -142,13 +143,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
-                    <ImageView
+                    <com.shehuan.niv.NiceImageView
+                        app:corner_radius="@dimen/dp_10"
                         android:id="@+id/iv1"
                         android:layout_width="0dp"
                         android:layout_height="@dimen/dp_100"
                         android:scaleType="centerCrop"
                         android:layout_weight="1"/>
-                    <ImageView
+                    <com.shehuan.niv.NiceImageView
+                        app:corner_radius="@dimen/dp_10"
                         android:id="@+id/iv2"
                         android:layout_marginLeft="@dimen/dp_3"
                         android:layout_width="0dp"
@@ -165,13 +168,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
-                    <ImageView
+                    <com.shehuan.niv.NiceImageView
+                        app:corner_radius="@dimen/dp_10"
                         android:id="@+id/iv3"
                         android:layout_width="0dp"
                         android:layout_height="@dimen/dp_100"
                         android:scaleType="centerCrop"
                         android:layout_weight="1"/>
-                    <ImageView
+                    <com.shehuan.niv.NiceImageView
+                        app:corner_radius="@dimen/dp_10"
                         android:id="@+id/iv4"
                         android:layout_marginLeft="@dimen/dp_3"
                         android:layout_width="0dp"
@@ -194,7 +199,7 @@
                 android:horizontalSpacing="@dimen/dp_3"/>
         </LinearLayout>
         <LinearLayout
-            android:visibility="visible"
+            android:visibility="gone"
             android:id="@+id/ll_share_video"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -260,7 +265,7 @@
                 <ImageView
                     android:id="@+id/iv_first"
                     android:layout_width="@dimen/dp_20"
-                    android:layout_height="@dimen/dp_20"
+                    android:layout_height="@dimen/dp_15"
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/ic_location_publish"/>
                 <TextView
