--- a/app/src/main/res/layout/layout_share_pic.xml
+++ b/app/src/main/res/layout/layout_share_pic.xml
@@ -2,18 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_100"
-    android:orientation="vertical"
-    android:background="@color/light_gray">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center_horizontal">
-        <ImageView
+        <com.shehuan.niv.NiceImageView
+            app:corner_radius="@dimen/dp_10"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:id="@+id/iv_pic"
-            android:src="@drawable/default_head_girl"/>
+            android:id="@+id/iv_pic"/>
     </RelativeLayout>
 </LinearLayout>
