--- a/app/src/main/res/layout/social_public_item_layout.xml
+++ b/app/src/main/res/layout/social_public_item_layout.xml
@@ -14,11 +14,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <tk.com.sharemusic.myview.CircleImage
+        <RelativeLayout
             android:layout_width="@dimen/dp_50"
-            android:layout_height="@dimen/dp_50"
-            android:src="@drawable/default_head_boy"
-            android:id="@+id/iv_head"/>
+            android:layout_height="@dimen/dp_50">
+            <tk.com.sharemusic.myview.CircleImage
+                android:layout_width="@dimen/dp_50"
+                android:layout_height="@dimen/dp_50"
+                android:src="@drawable/default_head_boy"
+                android:id="@+id/iv_head"/>
+        </RelativeLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
